# gitautocommit.cmake

./: GitAutoCommit.cmake  LICENSE  README.md
sample_projects/proj1/: CMakeLists.txt  config.h.in  test.c
